DADI: script + final commit

--- a/dadi/index.html
+++ b/dadi/index.html
@@ -10,9 +10,9 @@
     <script type="text/javascript" src="./script.js" defer></script>
 </head>
 <body>
-    <h2>Inserisci un numero da 1 a 6</h2>
-    <input type="number" id="number">
+    <h2>Genera un numero da 1 a 6</h2>
+    <button type="button" id="btnSfida">Tira i dati e sfida il computer!</button>
 
-    <button type="button" id="btnSfida">Sfida il computer!</button>
+    <h1 id="risultato"></h1>
 </body>
 </html>
